--- a/09_Struktura_projektu/XmlObrazek2/app/src/main/res/layout/activity_main.xml
+++ b/09_Struktura_projektu/XmlObrazek2/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="50dp"
-        android:background="#FFFFFF"
+        android:background="#00FFFFFF"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
         android:layout_height="350dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:background="#FFFFFF"
+        android:background="#00FFFFFF"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
